mount/output/infer_output.txt

target/target.cpp:28: error: Null Dereference
  pointer `max` last assigned on line 27 could be null and is dereferenced at line 28, column 10.
  26. int simple_null_pointer() {
  27.   struct Person* max = 0;
  28.   return max->age;
               ^
  29. }
  30. 

target/target.cpp:40: error: Null Dereference
  pointer `joe` last assigned on line 39 could be null and is dereferenced by call to `get_age()` at line 40, column 10.
  38. int null_pointer_interproc() {
  39.   struct Person* joe = Person_create(32, 64, 140);
  40.   return get_age(joe);
               ^
  41. }
  42. 

target/target.cpp:48: error: Resource Leak
  resource acquired by call to `open()` at line 44, column 12 is not released after line 48, column 5.
  46.     char buffer[256];
  47.     // We can easily batch that by separating with space
  48.     write(fd, buffer, strlen(buffer));
          ^
  49.   }
  50. }

target/target.cpp:54: error: Dead Store
  The value written to &p (type int*) is never used.
  52. void simple_leak() {
  53.   int* p;
  54.   p = (int*)malloc(sizeof(int));
        ^
  55. }
  56. 


Found 4 issues
          Issue Type(ISSUED_TYPE_ID): #
  Null Dereference(NULL_DEREFERENCE): 2
        Resource Leak(RESOURCE_LEAK): 1
              Dead Store(DEAD_STORE): 1
